Added one rule for vanilla option. Added integration test for invalid vanilla option. Updated README.